--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand navbar-dark bg-dark mb-3">
+        <nav class="navbar navbar-expand navbar-dark bg-secondary mb-3">
             <div class="container">
-                <a class="navbar-brand" href="{% url 'pages:home' %}">Loja Python</a>
+                <a class="navbar-brand" href="{% url 'pages:home' %}">PyPost</a>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'pages:profile' %}">Perfil</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_logout' %}">Sair</a>
                     </li>
